# sftp-streaming-s3

./: .gitignore  Makefile  README.md  example_with_monitoring.py  pyproject.toml  run_streamer.py
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/monitoring/dashboards/: sftp-s3-streaming.json
k8s/s3/: deployment.yml  service.yml
k8s/sftp/: deployment.yml  namespace.yml  nodeport-service.yml  pvc.yml  service.yml
monitoring/grafana/dashboards/: sftp-s3-streaming.json
scripts/: generate_file.py  sftp-s3-traditional.py
sftp_streaming/: main.py
src/: main.py
