[project]
name = "sftp-streaming"
version = "0.1.0"
description = "Streaming large files from SFTP to S3"
authors = [
    {name = "abyssnlp",email = "rawatshaurya1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paramiko (>=3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools]
packages = ["sftp_streaming"]
package-dir = {"" = "src"}
