[project]
name = "sftp-streaming"
version = "0.1.0"
description = "Streaming large files from SFTP to S3"
authors = [
    {name = "abyssnlp",email = "rawatshaurya1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "asyncssh (>=2.14.0,<3.0.0)",
    "aioboto3 (>=11.3.0,<13.0.0)",
    "aiofiles (>=23.2.1,<24.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "psutil (>=5.9.0,<6.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
moto = "^5.1.5"

